Added profile page

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
             </div>
         </div>
     </section>
-
+    <section>
+    </section>
     <script src="index.js"></script>
 </body>
 </html>
