Added folder structure

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Tinder for cars</title>
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="stylesheet" type="text/css" href="css/index.css">
     <link rel="stylesheet" href="./font-awesome/css/font-awesome.min.css">
 </head>
 <body>
@@ -31,6 +31,7 @@
     </section>
     <section>
     </section>
-    <script src="index.js"></script>
+    <script src="js/data.js"></script>
+    <script src="js/index.js"></script>
 </body>
 </html>
