--- a/profile.html
+++ b/profile.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8">
     <title>Tinder for cars</title>
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" type="text/css" href="profile.css">
+    <link rel="stylesheet" type="text/css" href="css/profile.css">
     <link rel="stylesheet" href="./font-awesome/css/font-awesome.min.css">
 </head>
 <body>
     <section>
-        <div class="container">.
+        <div class="container">
             <div class="dvImage">
                 <img class="image" src="http://roa.h-cdn.co/assets/15/04/980x490/gallery_nrm_1422074423-dodgechargersxt.jpg" />
             </div>
@@ -27,12 +27,13 @@
                 <div class="clearBoth"></div>
             </div>
             <div class="call">
-            <div class="col-1">Call</div>
-            <div class="col-2"><form action="tel:919044179936"><button type="submit">+91-9044179936</button></form></div>
+                <div class="col-1">Call</div>
+                <div class="col-2"><form action="tel:919044179936"><button type="submit">+91-9044179936</button></form></div>
+                <div class="clearBoth"></div>
             </div>
         </div>
     </section>
-
-    <script src="profile.js"></script>
+    <script src="js/data.js"></script>
+    <script src="js/profile.js"></script>
 </body>
 </html>
