--- a/profile.html
+++ b/profile.html
@@ -28,7 +28,7 @@
             </div>
             <div class="call">
                 <div class="col-1">Call</div>
-                <div class="col-2"><form action="tel:919044179936"><button type="submit">+91-9044179936</button></form></div>
+                <div class="col-2"><a href="tel:+919044179936"><button>+91-9044179936</button></a></div>
                 <div class="clearBoth"></div>
             </div>
         </div>
